# 170-hamiltonian-nn-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  backtest.py  data_loader.py  dissipative_hnn.py  hamiltonian_nn.py  requirements.txt  symplectic_integrator.py  train.py  visualize.py
rust_hamiltonian_nn/: Cargo.toml
rust_hamiltonian_nn/examples/: phase_portrait.rs
rust_hamiltonian_nn/src/: lib.rs
