[package]
name = "hamiltonian_nn_trading"
version = "0.1.0"
edition = "2021"
authors = ["ML4Trading Community"]
description = "Hamiltonian Neural Networks for Cryptocurrency Trading on Bybit"
license = "MIT"
repository = "https://github.com/suenot/machine-learning-for-trading"
keywords = ["hamiltonian", "neural-network", "trading", "cryptocurrency", "physics-informed"]
categories = ["science", "algorithms"]

[dependencies]
# HTTP client for API requests
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Linear algebra and matrix operations
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Progress bars
indicatif = "0.17"

# CSV for data export
csv = "1.3"

# Serialization for models
bincode = "1.3"

# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Statistical computations
statrs = "0.16"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[[bin]]
name = "fetch_data"
path = "src/bin/fetch_data.rs"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "predict"
path = "src/bin/predict.rs"

[[example]]
name = "phase_portrait"
path = "examples/phase_portrait.rs"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1
